--- a/index.html
+++ b/index.html
@@ -48,40 +48,43 @@ input{padding:12px;width:90%;border-radius:12px;font-size:16px}
 <section id="result" class="hidden">
 <h2>🔎 النتيجة النهائية</h2>
 <div id="output" class="result"></div>
-<!-- زر جديد لـ OFPPT CMC -->
 <button onclick="showCMC()" style="background:#009688">➡️ معلومات OFPPT – CMC</button>
 <button onclick="goHome()">⬅ رجوع</button>
 </section>
 
 <script>
 let level="",i=0;
-let scores={sci:0,eco:0,ad:0,tech:0,cmc:0};
+let scores={sci:0,eco:0,ad:0,tech:0};
 
+// الأسئلة بصيغة "كتفضل ..."
 const questions={
 "9":[
-{q:"كتفهم مزيان فالرياضيات؟",t:"sci"},
-{q:"كتحب التجارب والعلوم؟",t:"sci"},
-{q:"كتحب التنظيم والحساب؟",t:"eco"},
-{q:"كتحب القراءة واللغات؟",t:"ad"}
+{q:"كتفضل الحسابات والرياضيات؟",t:"sci"},
+{q:"كتفضل التجارب والعلوم؟",t:"sci"},
+{q:"كتفضل التنظيم والحساب؟",t:"eco"},
+{q:"كتفضل القراءة واللغات؟",t:"ad"}
 ],
 "bac1":[
-{q:"الرياضيات والفيزياء مزيانين عندك؟",t:"sci"},
-{q:"كتحب التحليل والمنطق؟",t:"sci"},
-{q:"كتحب المحاسبة والتسيير؟",t:"eco"},
-{q:"كتستمتع بالفلسفة واللغات؟",t:"ad"}
+{q:"كتفضل الرياضيات والفيزياء؟",t:"sci"},
+{q:"كتفضل العلوم الطبيعية؟",t:"sci"},
+{q:"كتفضل الاقتصاد والتسيير؟",t:"eco"},
+{q:"كتفضل الفلسفة واللغات؟",t:"ad"},
+{q:"كتفضل التطبيقات العملية والتكنولوجيا؟",t:"tech"}
 ],
 "bac":[
 {q:"كتفضل الدراسة النظرية؟",t:"ad"},
-{q:"كتحب التخصصات العلمية؟",t:"sci"},
-{q:"كتشوف راسك فالتجارة؟",t:"eco"},
-{q:"كتفضل تكوين تطبيقي؟",t:"tech"},
-{q:"كتحب التجارة والتسيير العملي؟",t:"cmc"}
+{q:"كتفضل التخصصات العلمية؟",t:"sci"},
+{q:"كتفضل المجال التجاري؟",t:"eco"},
+{q:"كتفضل التكوين التطبيقي؟",t:"tech"},
+{q:"كتفضل التجارة والتسيير العملي؟",t:"cmc"}
 ]
 };
 
 function start(lv){
 level=lv;i=0;
-scores={sci:0,eco:0,ad:0,tech:0,cmc:0};
+// فقط الباك عنده cmc
+scores={sci:0,eco:0,ad:0,tech:0};
+if(level==="bac") scores.cmc=0;
 hideAll();quiz.classList.remove("hidden");
 showQ();
 }
@@ -105,48 +108,59 @@ note.classList.remove("hidden");
 function showResult(){
 hideAll();
 result.classList.remove("hidden");
-
 let avg=parseFloat(document.getElementById("avg").value)||0;
 let best=Object.keys(scores).sort((a,b)=>scores[b]-scores[a])[0];
 let html="";
 
+// ====== تاسعة إعدادي ======
 if(level==="9"){
 html=`
 🧭 المسار الأنسب ليك:<br><br>
-${best==="sci"?"🔬 المسار العلمي":
-best==="eco"?"📊 المسار الاقتصادي":
-best==="ad"?"📚 المسار الأدبي":
-"⚙️ المسار التقني"}
+${best==="sci"?"🔬 علمي":
+best==="eco"?"📊 اقتصادي":
+best==="ad"?"📚 أدبي":
+"⚙️ تقني"}
 `;
 }
 
+// ====== أولى باك ======
 if(level==="bac1"){
 if(best==="sci"){
 html=`
-🎓 الشعبة المناسبة:<br>
-✅ العلوم التجريبية<br>
-${avg>=15?"✅ العلوم الرياضية A":""}
-${avg>=14?"✅ العلوم الرياضية B":""}
+🎓 الشعب العلمية:<br>
+✅ العلوم التجريبية (آفاق: الهندسة، العلوم الطبيعية، الطب)<br>
+✅ العلوم الرياضية A (آفاق: الهندسة، الاقتصاد، علوم الكمبيوتر)<br>
+✅ العلوم الرياضية B (آفاق: علوم، تقنيات، إدارة)<br>
 `;
 }
 if(best==="eco"){
-html=`🎓 الشعبة المناسبة:<br>✅ الاقتصاد والتدبير`;
+html=`
+🎓 الشعب الاقتصادية:<br>
+✅ الاقتصاد والتدبير (آفاق: التجارة، المحاسبة، الإدارة، التمويل)
+`;
 }
 if(best==="ad"){
 html=`
-🎓 الشعبة المناسبة:<br>
-✅ الآداب والعلوم الإنسانية<br>
-✅ التعليم الأصيل
+🎓 الشعب الأدبية:<br>
+✅ الآداب والعلوم الإنسانية (آفاق: التعليم، الصحافة، القانون، التاريخ)<br>
+✅ التعليم الأصيل (آفاق: التعليم الابتدائي والثانوي)
+`;
+}
+if(best==="tech"){
+html=`
+🎓 الشعب التقنية:<br>
+✅ التخصصات التطبيقية والتقنية (آفاق: IT، الإلكترونيات، الصناعة)
 `;
 }
 }
 
+// ====== الباك ======
 if(level==="bac"){
 if(best==="sci"){
 html=`
 🏫 التوجيه الجامعي:<br>
-${avg>=16?"✅ CPGE":"❌ CPGE (معدل ضعيف)"}<br>
-${avg>=14?"✅ FST":"❌ FST"}<br>
+${avg>=16?"✅ CPGE (آفاق: الهندسة، العلوم التطبيقية)":"❌ CPGE (معدل ضعيف)"}<br>
+${avg>=14?"✅ FST (آفاق: العلوم التطبيقية، الهندسة)":"❌ FST"}<br>
 ✅ كلية العلوم<br>
 ✅ EST
 `;
@@ -154,17 +168,17 @@ ${avg>=14?"✅ FST":"❌ FST"}<br>
 if(best==="eco"){
 html=`
 🏫 التوجيه الجامعي:<br>
-${avg>=14?"✅ ENCG":"❌ ENCG"}<br>
-${avg>=15?"✅ ISCAE":"❌ ISCAE"}<br>
+${avg>=14?"✅ ENCG (آفاق: التجارة، الإدارة)":"❌ ENCG"}<br>
+${avg>=15?"✅ ISCAE (آفاق: المحاسبة، المالية، الإدارة)":"❌ ISCAE"}<br>
 ✅ FSJES
 `;
 }
 if(best==="ad"){
 html=`
 🏫 التوجيه الجامعي:<br>
-✅ كلية الآداب<br>
-✅ الدراسات الإسلامية<br>
-✅ التعليم الأصيل
+✅ كلية الآداب (آفاق: التعليم، الإعلام، الترجمة)<br>
+✅ الدراسات الإسلامية (آفاق: التعليم الديني، الثقافة)<br>
+✅ التعليم الأصيل (آفاق: التدريس)
 `;
 }
 if(best==="tech"){
@@ -179,7 +193,10 @@ if(best==="cmc"){
 html=`
 🏫 التوجيه المهني:<br>
 ✅ OFPPT – شعبة CMC (Compétences Métiers et Commerciales)<br>
-آفاق المسار: العمل في التجارة، التسويق، المقاولات الصغيرة والمتوسطة
+📊 مقارنة مع OFPPT العام:<br>
+- OFPPT: أكثر تطبيقي، يركز على المهارات التقنية والمهنية<br>
+- CMC: أكثر تجاري، يركز على التسيير والمبيعات والمهارات العملية<br>
+آفاق: العمل في التجارة، التسويق، المقاولات الصغيرة والمتوسطة
 `;
 }
 }
@@ -194,10 +211,10 @@ result.classList.remove("hidden");
 output.innerHTML=`
 🏫 التوجيه المهني:<br>
 ✅ OFPPT – شعبة CMC (Compétences Métiers et Commerciales)<br>
-آفاق المسار: العمل في التجارة، التسويق، المقاولات الصغيرة والمتوسطة<br><br>
-📊 مقارنة مع باقي المسارات التقنية:<br>
+📊 مقارنة مع OFPPT العام:<br>
 - OFPPT: أكثر تطبيقي، يركز على المهارات التقنية والمهنية<br>
-- CMC: أكثر تجاري، يركز على التسيير والمبيعات والمهارات العملية
+- CMC: أكثر تجاري، يركز على التسيير والمبيعات والمهارات العملية<br>
+آفاق: العمل في التجارة، التسويق، المقاولات الصغيرة والمتوسطة
 `;
 }
 
