--- a/index.html
+++ b/index.html
@@ -2,38 +2,139 @@
 <html lang="ar" dir="rtl">
 <head>
 <meta charset="UTF-8">
-<title>🤖 التوجيه الذكي</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>🤖🎓 التوجيه الذكي</title>
+
 <style>
-body{margin:0;font-family:Tahoma;background:#eef2ff;text-align:center}
-header{background:linear-gradient(135deg,#3f51b5,#2196f3);color:#fff;padding:30px}
-section{max-width:950px;margin:30px auto;background:#fff;padding:30px;border-radius:22px;box-shadow:0 18px 40px rgba(0,0,0,.15)}
-button{width:90%;padding:14px;margin:10px auto;border:none;border-radius:16px;font-size:16px;cursor:pointer}
-button:hover{opacity:0.9;}
-.back{background:#607d8b;color:#fff}
-.result{text-align:right;line-height:1.9;font-size:16px;padding:10px}
-.progress{height:20px;background:#ddd;border-radius:10px;margin:20px auto;width:90%;overflow:hidden}
-.bar{height:100%;width:0%;border-radius:10px;transition:width 0.5s}
-input{padding:12px;width:90%;border-radius:12px;font-size:16px}
-#ofppt-cmc{background:#009688;color:#fff;padding:20px;border-radius:16px;margin:20px 0;text-align:right;}
-#ofppt-cmc button{background:#00796b;color:#fff;padding:10px;border:none;border-radius:12px;cursor:pointer;width:auto;margin-top:10px;}
-#comparison{background:#ffe0b2;padding:15px;border-radius:12px;margin-top:15px;text-align:right;}
-.sci{color:#1e88e5;} .eco{color:#43a047;} .ad{color:#f4511e;} .tech{color:#8e24aa;} .cmc{color:#009688;}
+body{
+  margin:0;
+  font-family:Tahoma;
+  background:linear-gradient(120deg,#e3f2fd,#ede7f6);
+  text-align:center;
+}
+
+/* ====== Header ====== */
+header{
+  background:linear-gradient(135deg,#512da8,#1976d2);
+  color:#fff;
+  padding:30px;
+}
+
+/* ====== Pages ====== */
+section{
+  max-width:900px;
+  margin:30px auto;
+  padding:30px;
+  border-radius:22px;
+  box-shadow:0 20px 45px rgba(0,0,0,.18);
+  animation:fade .4s ease;
+}
+@keyframes fade{
+  from{opacity:0;transform:translateY(20px)}
+  to{opacity:1;transform:translateY(0)}
+}
+
+.hidden{display:none}
+
+/* ====== Page colors ====== */
+#home{background:#ffffff}
+#quiz{background:linear-gradient(135deg,#e1f5fe,#ede7f6)}
+#result{background:linear-gradient(135deg,#f1f8e9,#fff)}
+#ofppt-cmc{background:linear-gradient(135deg,#004d40,#00796b);color:#fff}
+
+/* ====== Buttons ====== */
+button{
+  width:90%;
+  padding:14px;
+  margin:10px auto;
+  border:none;
+  border-radius:16px;
+  font-size:16px;
+  cursor:pointer;
+  color:#fff;
+  background:linear-gradient(135deg,#ff9800,#f57c00);
+}
+button:hover{opacity:.9}
+
+.back{background:linear-gradient(135deg,#607d8b,#455a64)}
+
+/* ====== Quiz ====== */
+.progress{
+  height:18px;
+  background:#cfd8dc;
+  border-radius:10px;
+  overflow:hidden;
+  margin-bottom:20px
+}
+.bar{
+  height:100%;
+  width:0%;
+  background:linear-gradient(135deg,#00c853,#64dd17);
+  transition:.4s
+}
+
+/* ====== Result ====== */
+.result{text-align:right;line-height:2;font-size:16px}
+
+/* ====== Comparison ====== */
+#comparison{
+  background:#fff3e0;
+  color:#000;
+  padding:15px;
+  border-radius:14px;
+  margin-top:15px
+}
+@media (max-width: 768px){
+
+  header h1{
+    font-size:22px;
+  }
+
+  header p{
+    font-size:14px;
+  }
+
+  section{
+    margin:15px;
+    padding:20px;
+    border-radius:18px;
+  }
+
+  button{
+    width:100%;
+    font-size:15px;
+    padding:12px;
+  }
+
+  .result{
+    font-size:15px;
+    line-height:1.8;
+  }
+
+  #comparison{
+    font-size:14px;
+  }
+}
 </style>
 </head>
+
 <body>
 
 <header>
-<h1>🤖 التوجيه الذكي</h1>
+<h1>🤖🎓 التوجيه الذكي</h1>
 <p>اختار مستقبلك بوعي، ماشي بالصدفة</p>
 </header>
 
+<!-- ====== HOME ====== -->
 <section id="home">
-<h2>اختار المستوى الدراسي</h2>
+<h2>📚 اختار المستوى</h2>
 <button onclick="start('9')">تاسعة إعدادي</button>
 <button onclick="start('bac1')">أولى باك</button>
 <button onclick="start('bac')">البكالوريا</button>
+<button onclick="showOFPPTCMC()">OFPPT – CMC</button>
 </section>
 
+<!-- ====== QUIZ ====== -->
 <section id="quiz" class="hidden">
 <div class="progress"><div class="bar" id="bar"></div></div>
 <h3 id="question"></h3>
@@ -42,138 +143,119 @@ input{padding:12px;width:90%;border-radius:12px;font-size:16px}
 <button class="back" onclick="goHome()">⬅ رجوع</button>
 </section>
 
-<section id="note" class="hidden">
-<h3>دخل ميولك</h3>
-<button onclick="showResult()">عرض النتيجة</button>
-</section>
-
+<!-- ====== RESULT ====== -->
 <section id="result" class="hidden">
-<h2>🔎 النتيجة النهائية</h2>
+<h2>🔎 النتيجة ديالك</h2>
 <div id="output" class="result"></div>
-<button onclick="showOFPPTCMC()">➡️ معلومات OFPPT – CMC</button>
 <button class="back" onclick="goHome()">⬅ رجوع</button>
 </section>
 
+<!-- ====== OFPPT CMC ====== -->
 <section id="ofppt-cmc" class="hidden">
-<h3>🏫 OFPPT – CMC</h3>
-<p>📊 مقارنة بين OFPPT العام وCMC:</p>
-<ul>
-<li>✅ <strong>OFPPT:</strong> تطبيقي، يركز على المهارات التقنية والمهنية</li>
-<li>✅ <strong>CMC:</strong> أكثر تجاري، يركز على التسيير والمبيعات والمهارات العملية</li>
-</ul>
-<p>🌟 <strong>آفاق العمل:</strong> التجارة، التسويق، المقاولات الصغيرة والمتوسطة</p>
-<button onclick="showComparison()">➡️ قارن تخصصين</button>
-<button onclick="hideOFPPTCMC()">⬅ رجوع</button>
+<h2>🏫 OFPPT – CMC</h2>
+
+<p>
+<strong>CMC:</strong> تجارة – تسيير – مبيعات<br>
+<strong>OFPPT:</strong> تقني – مهني – تطبيقي
+</p>
+
+<p>
+🌟 <strong>الآفاق:</strong><br>
+التجارة، التسويق، المقاولات الصغرى
+</p>
+
+<button onclick="showComparison()">📊 قارن OFPPT و CMC</button>
+<button class="back" onclick="goHome()">⬅ رجوع</button>
 
 <div id="comparison" class="hidden">
-<h4>📌 مقارنة بين OFPPT العام وCMC</h4>
+<h4>📌 المقارنة</h4>
 <ul>
-<li>OFPPT: تطبيقي، يركز على المهارات التقنية والمهنية</li>
-<li>CMC: تجاري، يركز على التسيير والمبيعات والمهارات العملية</li>
-<li>آفاق OFPPT: IT، الصناعة، الخدمات التقنية</li>
-<li>آفاق CMC: التجارة، التسويق، المقاولات الصغيرة والمتوسطة</li>
+<li>OFPPT: تقني، صناعي، IT</li>
+<li>CMC: تجاري، مبيعات، تسيير</li>
 </ul>
-<button onclick="hideComparison()" style="background:#ff7043;color:#fff;padding:10px;border:none;border-radius:12px;">⬅ إغلاق المقارنة</button>
 </div>
 </section>
 
 <script>
-let level="", i=0;
-let scores={sci:0, eco:0, ad:0, tech:0, cmc:0};
+let level="",i=0;
+let scores={sci:0,eco:0,ad:0,tech:0,cmc:0};
 
 const questions={
 "9":[
-{q:"كتفضل الحسابات والرياضيات؟",t:"sci"},
-{q:"كتفضل التجارب والعلوم؟",t:"sci"},
-{q:"كتفضل التنظيم والحساب؟",t:"eco"},
-{q:"كتفضل القراءة واللغات؟",t:"ad"}
+["كتحب الحساب؟","sci"],
+["كتحب القراية؟","ad"]
 ],
 "bac1":[
-{q:"كتفضل الرياضيات والفيزياء؟",t:"sci"},
-{q:"كتفضل العلوم الطبيعية؟",t:"sci"},
-{q:"كتفضل الاقتصاد والتسيير؟",t:"eco"},
-{q:"كتفضل الفلسفة واللغات؟",t:"ad"},
-{q:"كتفضل التطبيقات العملية والتكنولوجيا؟",t:"tech"}
+["كتحب الرياضيات؟","sci"],
+["كتحب التجارة؟","eco"],
+["كتحب التكنولوجيا؟","tech"]
 ],
 "bac":[
-{q:"كتفضل الدراسة النظرية؟",t:"ad"},
-{q:"كتفضل التخصصات العلمية؟",t:"sci"},
-{q:"كتفضل المجال التجاري؟",t:"eco"},
-{q:"كتفضل التكوين التطبيقي؟",t:"tech"},
-{q:"كتفضل التجارة والتسيير العملي؟",t:"cmc"}
+["كتفضل العلمي؟","sci"],
+["كتفضل التجاري؟","cmc"],
+["كتفضل التطبيقي؟","tech"]
 ]
 };
 
-const tips = {
-"9": "📌 نصيحة: ركز على ميولاتك وطور مهاراتك الأساسية.",
-"bac1": "📌 نصيحة: اختار الشعبة التي تلائم قدراتك وميولاتك.",
-"bac": "📌 نصيحة: فكر في المستقبل المهني قبل اختيار التخصص."
+const tips={
+"9":"📌 نصيحة: بنِ أساس قوي دابا باش تختار مزيان من بعد.",
+"bac1":"📌 نصيحة: ميولاتك أهم من كلام الناس.",
+"bac":"📌 نصيحة: فكّر فالمهنة قبل الدبلوم."
 };
 
-const verses = {
-"9": "💡 آية تحفيزية: {وَقُلِ اعْمَلُوا فَسَيَرَى اللَّهُ عَمَلَكُمْ} [التوبة:105]",
-"bac1": "💡 آية تحفيزية: {وَسَارِعُوا إِلَى مَغْفِرَةٍ مِنْ رَبِّكُمْ} [الحديد:21]",
-"bac": "💡 آية تحفيزية: {وَأَن لَّيْسَ لِلْإِنسَانِ إِلَّا مَا سَعَى} [النجم:39]"
+const verses={
+"9":"{وَقُلِ اعْمَلُوا فَسَيَرَى اللَّهُ عَمَلَكُمْ}",
+"bac1":"{وَسَارِعُوا إِلَى مَغْفِرَةٍ مِنْ رَبِّكُمْ}",
+"bac":"{وَأَن لَّيْسَ لِلْإِنسَانِ إِلَّا مَا سَعَى}"
 };
 
-function start(lv){
-level=lv; i=0;
-scores={sci:0, eco:0, ad:0, tech:0};
-if(level==="bac") scores.cmc=0;
-hideAll(); document.getElementById("quiz").classList.remove("hidden"); showQ();
-updateBar(0);
+function hideAll(){
+document.querySelectorAll("section").forEach(s=>s.classList.add("hidden"));
+}
+
+function start(l){
+level=l;i=0;
+scores={sci:0,eco:0,ad:0,tech:0,cmc:0};
+hideAll();
+quiz.classList.remove("hidden");
+showQ();
 }
 
 function showQ(){
-document.getElementById("question").textContent = questions[level][i].q;
-updateBar(i/questions[level].length*100);
-}
-
-function updateBar(percent){
-document.getElementById("bar").style.width = percent+"%";
-document.getElementById("bar").style.background = level==="9"?"#1e88e5":level==="bac1"?"#43a047":"#8e24aa";
+question.innerText=questions[level][i][0];
+bar.style.width=(i/questions[level].length*100)+"%";
 }
 
 function answer(v){
-if(v) scores[questions[level][i].t]++;
-i++; i<questions[level].length ? showQ() : askNote();
+if(v) scores[questions[level][i][1]]++;
+i++;
+i<questions[level].length?showQ():showResult();
 }
-
-function askNote(){hideAll(); document.getElementById("note").classList.remove("hidden");}
 
 function showResult(){
-hideAll(); document.getElementById("result").classList.remove("hidden");
+hideAll();
+result.classList.remove("hidden");
 let best=Object.keys(scores).sort((a,b)=>scores[b]-scores[a])[0];
-let icons={sci:"🔬", eco:"📊", ad:"📚", tech:"⚙️", cmc:"💼"};
-let colors={sci:"sci", eco:"eco", ad:"ad", tech:"tech", cmc:"cmc"};
-let html=`<span class="${colors[best]}">${icons[best]}</span> ${tips[level]}<br>${verses[level]}<br><br>`;
-
-if(level==="9"){
-html+=best==="sci"?"🔬 مسار علمي":best==="eco"?"📊 مسار اقتصادي":best==="ad"?"📚 مسار أدبي":"⚙️ مسار تقني";
-}
-if(level==="bac1"){
-if(best==="sci") html+="🎓 العلوم التجريبية (آفاق: الهندسة، الطب، العلوم الطبيعية)";
-if(best==="eco") html+="🎓 الاقتصاد والتدبير (آفاق: التجارة، الإدارة، المحاسبة)";
-if(best==="ad") html+="🎓 الآداب والعلوم الإنسانية (آفاق: التعليم، الصحافة، القانون)";
-if(best==="tech") html+="🎓 التخصصات التقنية (آفاق: IT، الإلكترونيات، الصناعة)";
-}
-if(level==="bac"){
-if(best==="sci") html+="🎓 CPGE/FST/EST (آفاق: الهندسة، العلوم التطبيقية)";
-if(best==="eco") html+="🎓 ENCG/ISCAE/FSJES (آفاق: التجارة، الإدارة، المحاسبة)";
-if(best==="ad") html+="🎓 كلية الآداب والدراسات الإسلامية (آفاق: التعليم، الثقافة، التدريس)";
-if(best==="tech") html+="🎓 OFPPT/BTS/FST تطبيقية (آفاق: IT، الصناعة)";
-if(best==="cmc") html+="🎓 OFPPT – CMC (آفاق: التجارة، التسويق، المقاولات الصغيرة والمتوسطة)";
+output.innerHTML=`
+<strong>✅ التخصص الأنسب ليك:</strong> ${best}<br><br>
+${tips[level]}<br><br>
+💡 ${verses[level]}
+`;
 }
 
-document.getElementById("output").innerHTML = html;
+function showOFPPTCMC(){
+hideAll();
+document.getElementById("ofppt-cmc").classList.remove("hidden");
 }
 
-function showOFPPTCMC(){hideAll(); document.getElementById("ofppt-cmc").classList.remove("hidden");}
-function hideOFPPTCMC(){document.getElementById("ofppt-cmc").classList.add("hidden"); goHome();}
-function showComparison(){document.getElementById("comparison").classList.remove("hidden");}
-function hideComparison(){document.getElementById("comparison").classList.add("hidden");}
-function goHome(){hideAll(); document.getElementById("home").classList.remove("hidden");}
-function hideAll(){document.querySelectorAll("section").forEach(s=>s.classList.add("hidden"));}
+function showComparison(){
+document.getElementById("comparison").classList.remove("hidden");
+}
+
+function goHome(){
+hideAll();
+home.classList.remove("hidden");
+}
 </script>
 
 </body>
