--- a/index.html
+++ b/index.html
@@ -4,120 +4,22 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>🤖🎓 التوجيه الذكي</title>
-
 <style>
-body{
-  margin:0;
-  font-family:Tahoma;
-  background:linear-gradient(120deg,#e3f2fd,#ede7f6);
-  text-align:center;
-}
-
-/* ====== Header ====== */
-header{
-  background:linear-gradient(135deg,#512da8,#1976d2);
-  color:#fff;
-  padding:30px;
-}
-
-/* ====== Pages ====== */
-section{
-  max-width:900px;
-  margin:30px auto;
-  padding:30px;
-  border-radius:22px;
-  box-shadow:0 20px 45px rgba(0,0,0,.18);
-  animation:fade .4s ease;
-}
-@keyframes fade{
-  from{opacity:0;transform:translateY(20px)}
-  to{opacity:1;transform:translateY(0)}
-}
-
+body{margin:0;font-family:Tahoma;background:linear-gradient(120deg,#e3f2fd,#ede7f6);text-align:center;}
+header{background:linear-gradient(135deg,#512da8,#1976d2);color:#fff;padding:25px;}
+section{max-width:900px;margin:20px auto;padding:25px;border-radius:20px;box-shadow:0 18px 40px rgba(0,0,0,.18);animation:fade .4s ease;}
+@keyframes fade{from{opacity:0;transform:translateY(20px)} to{opacity:1;transform:translateY(0)}}
 .hidden{display:none}
-
-/* ====== Page colors ====== */
-#home{background:#ffffff}
-#quiz{background:linear-gradient(135deg,#e1f5fe,#ede7f6)}
-#result{background:linear-gradient(135deg,#f1f8e9,#fff)}
-#ofppt-cmc{background:linear-gradient(135deg,#004d40,#00796b);color:#fff}
-
-/* ====== Buttons ====== */
-button{
-  width:90%;
-  padding:14px;
-  margin:10px auto;
-  border:none;
-  border-radius:16px;
-  font-size:16px;
-  cursor:pointer;
-  color:#fff;
-  background:linear-gradient(135deg,#ff9800,#f57c00);
-}
-button:hover{opacity:.9}
-
-.back{background:linear-gradient(135deg,#607d8b,#455a64)}
-
-/* ====== Quiz ====== */
-.progress{
-  height:18px;
-  background:#cfd8dc;
-  border-radius:10px;
-  overflow:hidden;
-  margin-bottom:20px
-}
-.bar{
-  height:100%;
-  width:0%;
-  background:linear-gradient(135deg,#00c853,#64dd17);
-  transition:.4s
-}
-
-/* ====== Result ====== */
-.result{text-align:right;line-height:2;font-size:16px}
-
-/* ====== Comparison ====== */
-#comparison{
-  background:#fff3e0;
-  color:#000;
-  padding:15px;
-  border-radius:14px;
-  margin-top:15px
-}
-@media (max-width: 768px){
-
-  header h1{
-    font-size:22px;
-  }
-
-  header p{
-    font-size:14px;
-  }
-
-  section{
-    margin:15px;
-    padding:20px;
-    border-radius:18px;
-  }
-
-  button{
-    width:100%;
-    font-size:15px;
-    padding:12px;
-  }
-
-  .result{
-    font-size:15px;
-    line-height:1.8;
-  }
-
-  #comparison{
-    font-size:14px;
-  }
-}
+button{width:90%;padding:14px;margin:10px auto;border:none;border-radius:16px;font-size:16px;cursor:pointer;color:#fff;background:linear-gradient(135deg,#ff9800,#f57c00);}
+.back{background:linear-gradient(135deg,#607d8b,#455a64);}
+.progress{height:16px;background:#cfd8dc;border-radius:10px;overflow:hidden;margin-bottom:15px}
+.bar{height:100%;width:0%;background:linear-gradient(135deg,#00c853,#64dd17);transition:.4s}
+.result{text-align:right;line-height:2}
+select,input{width:90%;padding:12px;border-radius:14px;font-size:15px;margin:10px 0}
+.spec{background:#fff;padding:15px;border-radius:14px;margin:12px 0;text-align:right}
+.percent{color:#2e7d32;font-weight:bold}
 </style>
 </head>
-
 <body>
 
 <header>
@@ -125,16 +27,16 @@ button:hover{opacity:.9}
 <p>اختار مستقبلك بوعي، ماشي بالصدفة</p>
 </header>
 
-<!-- ====== HOME ====== -->
+<!-- HOME -->
 <section id="home">
 <h2>📚 اختار المستوى</h2>
 <button onclick="start('9')">تاسعة إعدادي</button>
 <button onclick="start('bac1')">أولى باك</button>
-<button onclick="start('bac')">البكالوريا</button>
-<button onclick="showOFPPTCMC()">OFPPT – CMC</button>
+<button onclick="showBac()">ما بعد البكالوريا</button>
+<button onclick="showOFPPT()">OFPPT – CMC</button>
 </section>
 
-<!-- ====== QUIZ ====== -->
+<!-- QUIZ -->
 <section id="quiz" class="hidden">
 <div class="progress"><div class="bar" id="bar"></div></div>
 <h3 id="question"></h3>
@@ -143,119 +45,151 @@ button:hover{opacity:.9}
 <button class="back" onclick="goHome()">⬅ رجوع</button>
 </section>
 
-<!-- ====== RESULT ====== -->
+<!-- RESULT -->
 <section id="result" class="hidden">
-<h2>🔎 النتيجة ديالك</h2>
+<h2>🔎 النتيجة</h2>
 <div id="output" class="result"></div>
 <button class="back" onclick="goHome()">⬅ رجوع</button>
 </section>
 
-<!-- ====== OFPPT CMC ====== -->
-<section id="ofppt-cmc" class="hidden">
-<h2>🏫 OFPPT – CMC</h2>
-
-<p>
-<strong>CMC:</strong> تجارة – تسيير – مبيعات<br>
-<strong>OFPPT:</strong> تقني – مهني – تطبيقي
-</p>
-
-<p>
-🌟 <strong>الآفاق:</strong><br>
-التجارة، التسويق، المقاولات الصغرى
-</p>
-
-<button onclick="showComparison()">📊 قارن OFPPT و CMC</button>
+<!-- ما بعد البكالوريا -->
+<section id="bac" class="hidden">
+<h2>🎓 ما بعد البكالوريا</h2>
+<p>دخل المعدل واختر التخصص ديالك:</p>
+<input type="number" id="bacAvg" placeholder="مثال: 16.50" step="0.01" min="0" max="20">
+<select id="bacSpec">
+<option value="">-- اختار التخصص --</option>
+<option value="sci">علوم فيزيائية/رياضية</option>
+<option value="eco">اقتصاد وتسيير</option>
+<option value="ad">آداب ولغات</option>
+<option value="tech">تقني/برمجة</option>
+<option value="cmc">إدارة ومبيعات</option>
+</select>
+<button onclick="showBacResult()">عرض النتيجة</button>
 <button class="back" onclick="goHome()">⬅ رجوع</button>
+<div id="bacResult" class="result"></div>
+</section>
 
-<div id="comparison" class="hidden">
-<h4>📌 المقارنة</h4>
-<ul>
-<li>OFPPT: تقني، صناعي، IT</li>
-<li>CMC: تجاري، مبيعات، تسيير</li>
-</ul>
-</div>
+<!-- OFPPT CMC -->
+<section id="ofppt" class="hidden">
+<h2>🏫 OFPPT – CMC</h2>
+<p>اختار جوج تخصصات وقارن بينهم 👇</p>
+<select id="spec1">
+<option value="">-- التخصص الأول --</option>
+<option value="gestion">إدارة المقاولات</option>
+<option value="programmation">برمجة وتطوير</option>
+<option value="reseaux">شبكات وتقنية</option>
+</select>
+<select id="spec2">
+<option value="">-- التخصص الثاني --</option>
+<option value="gestion">إدارة المقاولات</option>
+<option value="programmation">برمجة وتطوير</option>
+<option value="reseaux">شبكات وتقنية</option>
+</select>
+<button onclick="compare()">📊 قارن التخصصين</button>
+<button class="back" onclick="goHome()">⬅ رجوع</button>
+<div id="compareResult"></div>
 </section>
 
 <script>
+// ====== أسئلة ومستويات ======
 let level="",i=0;
-let scores={sci:0,eco:0,ad:0,tech:0,cmc:0};
+let scores={sci:0,ad:0,tech:0,eco:0,cmc:0};
 
 const questions={
 "9":[
-["كتحب الحساب؟","sci"],
-["كتحب القراية؟","ad"]
+["مهتم بالرياضيات؟","sci"],["مهتم بالتجارب العلمية؟","sci"],["مهتم بالعلوم الطبيعية؟","sci"],
+["مهتم بالقراءة والآداب؟","ad"],["مهتم بالفنون؟","ad"],["مهتم بالكتابة؟","ad"],
+["مهتم بالتقنية؟","tech"],["مهتم بالبرمجة؟","tech"],["مهتم بالتصنيع؟","tech"],["مهتم بالابتكار؟","tech"]
 ],
 "bac1":[
-["كتحب الرياضيات؟","sci"],
-["كتحب التجارة؟","eco"],
-["كتحب التكنولوجيا؟","tech"]
-],
-"bac":[
-["كتفضل العلمي؟","sci"],
-["كتفضل التجاري؟","cmc"],
-["كتفضل التطبيقي؟","tech"]
+["مهتم بالرياضيات؟","sci"],["مهتم بالفيزياء؟","sci"],["مهتم بالكيمياء؟","sci"],
+["مهتم بالاقتصاد؟","eco"],["مهتم بالتسيير؟","eco"],["مهتم بالتجارة؟","eco"],
+["مهتم بالآداب؟","ad"],["مهتم باللغات؟","ad"],["مهتم بالتاريخ؟","ad"],["مهتم بالفلسفة؟","ad"]
 ]
 };
 
+// نصائح وآيات
 const tips={
-"9":"📌 نصيحة: بنِ أساس قوي دابا باش تختار مزيان من بعد.",
-"bac1":"📌 نصيحة: ميولاتك أهم من كلام الناس.",
-"bac":"📌 نصيحة: فكّر فالمهنة قبل الدبلوم."
+"9":"📌 نصيحة: ركّز على ميولاتك الأساسية.",
+"bac1":"📌 نصيحة: اختار شعبة تلائم قدراتك.",
+"bac":"📌 نصيحة: فكّر في المستقبل المهني قبل التخصص."
 };
-
 const verses={
 "9":"{وَقُلِ اعْمَلُوا فَسَيَرَى اللَّهُ عَمَلَكُمْ}",
 "bac1":"{وَسَارِعُوا إِلَى مَغْفِرَةٍ مِنْ رَبِّكُمْ}",
 "bac":"{وَأَن لَّيْسَ لِلْإِنسَانِ إِلَّا مَا سَعَى}"
 };
 
-function hideAll(){
-document.querySelectorAll("section").forEach(s=>s.classList.add("hidden"));
-}
+// بيانات OFPPT/CMC
+const specs={
+gestion:{name:"إدارة المقاولات",jobs:"مدير مشروع، مستشار أعمال",future:"الشركات الصغيرة والمتوسطة",chance:"85%"},
+programmation:{name:"برمجة وتطوير",jobs:"مبرمج، مطور تطبيقات",future:"شركات تكنولوجيا المعلومات",chance:"90%"},
+reseaux:{name:"شبكات وتقنية",jobs:"مهندس شبكات، تقني",future:"شركات الاتصالات والخدمات التقنية",chance:"80%"}
+};
 
-function start(l){
-level=l;i=0;
-scores={sci:0,eco:0,ad:0,tech:0,cmc:0};
-hideAll();
-quiz.classList.remove("hidden");
-showQ();
-}
+// بيانات ما بعد البكالوريا
+const universities={
+"sci":[{name:"FST/EST",chance:16,info:"هندسة، علوم تطبيقية",jobs:"مهندس، باحث"},
+{name:"CPGE علوم",chance:17,info:"تحضير للهندسة",jobs:"مهندس مستقبلي"},
+{name:"كلية العلوم",chance:12,info:"علوم رياضية وعلوم تجريبية",jobs:"باحث، مدرس"}],
+"eco":[{name:"ENCG",chance:14,info:"تجارة، إدارة، محاسبة",jobs:"مدير، محاسب، مسير مشاريع"},
+{name:"ISCAE",chance:15,info:"مالية، إدارة، تجارة",jobs:"محاسب، مستشار مالي"},
+{name:"FSJES",chance:12,info:"تسيير واقتصاد",jobs:"مسير أعمال، محلل اقتصادي"}],
+"ad":[{name:"كلية الآداب",chance:10,info:"تعليم، ترجمة، إعلام",jobs:"مترجم، مدرس، صحفي"},
+{name:"دراسات إسلامية",chance:12,info:"ثقافة، تعليم ديني",jobs:"مدرس، باحث ديني"},
+{name:"الآداب والعلوم الإنسانية",chance:11,info:"تاريخ، فلسفة",jobs:"باحث، كاتب، مدرس"}],
+"tech":[{name:"OFPPT/BTS",chance:12,info:"IT، إلكترونيات، صناعات",jobs:"مبرمج، تقني، مهندس تطبيقات"},
+{name:"FST تطبيقية",chance:14,info:"علوم وتقنية",jobs:"مهندس تقني، مطور"},
+{name:"تخصصات تقنية أخرى",chance:10,info:"برمجة، شبكات، صناعة",jobs:"مبرمج، مهندس شبكات، تقني صناعي"}],
+"cmc":[{name:"OFPPT – CMC",chance:12,info:"تسيير، تجارة، مهارات عملية",jobs:"مسير مشاريع، مندوب تجاري"},
+{name:"مدارس إدارة الأعمال",chance:14,info:"تسيير ومقاولات",jobs:"مدير أعمال، مستشار"},
+{name:"تخصصات تجارية أخرى",chance:10,info:"إدارة، محاسبة",jobs:"محاسب، مدير، محلل"}]
+};
 
-function showQ(){
-question.innerText=questions[level][i][0];
-bar.style.width=(i/questions[level].length*100)+"%";
-}
-
-function answer(v){
-if(v) scores[questions[level][i][1]]++;
-i++;
-i<questions[level].length?showQ():showResult();
-}
-
+// ====== Functions ======
+function hideAll(){document.querySelectorAll("section").forEach(s=>s.classList.add("hidden"));}
+function start(l){level=l;i=0;scores={sci:0,ad:0,tech:0,eco:0,cmc:0};hideAll();quiz.classList.remove("hidden");showQ();}
+function showQ(){question.innerText=questions[level][i][0];bar.style.width=(i/questions[level].length*100)+"%";}
+function answer(v){if(v) scores[questions[level][i][1]]++; i++; i<questions[level].length?showQ():showResult();}
 function showResult(){
-hideAll();
-result.classList.remove("hidden");
+hideAll();result.classList.remove("hidden");
 let best=Object.keys(scores).sort((a,b)=>scores[b]-scores[a])[0];
-output.innerHTML=`
-<strong>✅ التخصص الأنسب ليك:</strong> ${best}<br><br>
-${tips[level]}<br><br>
-💡 ${verses[level]}
-`;
+let outputText="";
+if(level==="9"){outputText=best==="sci"?"🔬 علمي":best==="ad"?"📚 آداب":"⚙️ تقني";}
+else if(level==="bac1"){
+if(best==="sci") outputText="🎓 علوم فيزيائية";
+else if(best==="eco") outputText="🎓 اقتصاد وتسيير";
+else if(best==="ad") outputText="🎓 آداب ولغات";
+else if(best==="tech") outputText="🎓 تقني";}
+output.innerHTML=`<strong>التخصص الأنسب:</strong> ${outputText}<br><br>${tips[level]}<br><br>💡 ${verses[level]}`;
 }
 
-function showOFPPTCMC(){
-hideAll();
-document.getElementById("ofppt-cmc").classList.remove("hidden");
+function showBac(){hideAll();bac.classList.remove("hidden");}
+function showBacResult(){
+let avg=parseFloat(document.getElementById("bacAvg").value)||0;
+let spec=document.getElementById("bacSpec").value;
+if(!spec){alert("خاصك تختار التخصص"); return;}
+let list=universities[spec].filter(u=>avg>=u.chance);
+if(list.length===0) list=universities[spec];
+list.sort((a,b)=>b.chance-a.chance);
+let html="<h3>أفضل 3 خيارات لك:</h3>";
+list.slice(0,3).forEach(u=>{
+html+=`<div class="spec"><strong>${u.name}</strong><br>📈 معدل القبول: ${u.chance}<br>🚀 الآفاق: ${u.info}<br>💼 المهن: ${u.jobs}</div>`;
+});
+document.getElementById("bacResult").innerHTML=html;
 }
 
-function showComparison(){
-document.getElementById("comparison").classList.remove("hidden");
+function showOFPPT(){hideAll();ofppt.classList.remove("hidden");}
+function compare(){
+let s1=spec1.value,s2=spec2.value;
+if(!s1||!s2||s1===s2){alert("خاصك تختار جوج تخصصات مختلفين");return;}
+let a=specs[s1],b=specs[s2];
+compareResult.innerHTML=`<div class="spec"><strong>${a.name}</strong><br>💼 ${a.jobs}<br>🚀 ${a.future}<br>📈 <span class="percent">${a.chance}</span></div>
+<div class="spec"><strong>${b.name}</strong><br>💼 ${b.jobs}<br>🚀 ${b.future}<br>📈 <span class="percent">${b.chance}</span></div>`;
 }
 
-function goHome(){
-hideAll();
-home.classList.remove("hidden");
-}
+function goHome(){hideAll();home.classList.remove("hidden");}
 </script>
 
 </body>
